Refactor onboarding and navigation flow: update index.html, intervalChoice.html, levelChoice.html, and newsFeed.html; remove onboarding.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,88 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/11.6.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/11.6.1/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/11.6.1/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+<html lang="en">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Onboarding</title>
+    <style>
+        * {
+            box-sizing: border-box;
         }
-      });
-    </script>
-  </body>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: 'Work Sans', sans-serif;
+            color: #333;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            line-height: 1.5;
+        }
+        .onboarding-container {
+            background: #ffefc9;
+            border-radius: 40px;
+            padding: 20px;
+            max-width: 400px;
+            width: 90%;
+        }
+        .onboarding-container h1 {
+            font-size: 50px;
+            margin-bottom: 10px;
+            font-family: 'Space Mono', monospace;
+        }
+        .onboarding-container p {
+            font-size: 20px;
+            color: #555;
+            margin-bottom: 20px;
+        }
+        .onboarding-container input[type="text"] {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0 20px 0;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            font-size: 16px;
+        }
+        .onboarding-container input[type="text"]:focus {
+            border-color: #e4a0b7;
+            outline: none;
+        }
+        .onboarding-container button {
+            width: 100%;
+            background-color: #e4a0b7;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 10px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+        .onboarding-container button:hover {
+            background-color: #d55f87;
+        }
+        body {
+            background-image: url('https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEV3tP%2F%2FCYXv9Zdwl%2F1RNfzGV9UTu8KUWzw0qmIfK0IJlAKOpf%2Fh%2FIj20SebQb9EHmFXROoG6b%2B7MYQ8SPlbRgsREGIoF20Mi0SCNdFHO6%2FnM9kH1zn%2FDtlFNofJC5CAnY3wN20FfWfNI1r0uiLaHWpgz3MIiHoLZC8SjFQefFVmwgbhBReCd4%2BoSrrTtPtyaLEhs5cWm74poV6MAXpHb%2Fbca1Un9cwjLm9qTzwWKtRCQguUiMNQVoKjgvQ84WqGm0mrZa62kPY35HNaS2zmtU4xWspZR2pklZMIRcHDF%2FXwF0IpLw7g88g5nDkMfBrv9xE4VN9fyzcWWRmgQ9jUaSxN5Pdren%2BzLpfvRqXUbaMxSZG%2Bfob%2Be89xVSjUhgls49Jnzn4At82tW1BBu20HmGokm0N0SjDN%2FQP66SySHyGZJoBxPk20WIhiUTwzCOd1%2BEl9uwD2mCeKZKDEs07lEoPsBkUYk6soPlcMDde0jPLwS%2Bsf5ajeQV4dHPPMz2CzzV8WCHGybwdnxNKOve4GI9sK5SKhfyphVY68T%2Bj7KanUzCMTVWhElaCuvvknyneAV5PAxI7A8m2njjtdjUc%3D&allow_caching=true&sz=w1920-h912');
+   
+        }
+    </style>
+</head>
+<body>
+    <div class="onboarding-container">
+        <h1>Hey there,</h1>
+        <p>Ready to touch grass?</p>
+        <p>Enter your REAL Name</p>
+        <form action="intervalChoice.html" method="POST">
+            <input type="text" name="realName" placeholder="Your Name" required>
+            <input type="hidden" name="onboarding" value="true">
+            <input type="hidden" name="onboardingStep" value="1">
+            <button type="submit">Get Started</button>
+        </form>
+    </div>
+</body>
 </html>
