--- a/public/intervalChoice.html
+++ b/public/intervalChoice.html
@@ -116,7 +116,7 @@
             <input type="range" id="custom-slider" min="5" max="50" step="1">
         </div>
         <div class="footer-text">⏳ 1 Hour Limit</div>
-        <button class="navigate-button" onclick="window.location.href='page.html'">Next</button>
+        <button class="navigate-button" onclick="window.location.href='levelChoice.html'">Next</button>
     </div>
 </body>
 </html>
