--- a/public/workout.html
+++ b/public/workout.html
@@ -149,7 +149,10 @@
       if (counter < 10) {
         requestAnimationFrame(predictPose);
       } else {
-        document.getElementById('counter').innerText = "Workout Complete! 🎉";
+        document.getElementById('counter').innerText = "Workout Complete! 🎉 Redirecting to Feed...";
+        setTimeout(() => {
+          window.location.href = 'newsFeed.html'; // Redirect to newsFeed.html after 3 seconds
+        }, 3000); // 3000ms = 3 seconds
       }
     }
 
