--- a/public/404.html
+++ b/public/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
 
