--- a/public/workout.html
+++ b/public/workout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="/assets/logo.png">>
+  <link rel="icon" type="image/x-icon" href="/assets/logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jumping Jack Detection</title>
