--- a/onboarding.html
+++ b/onboarding.html
@@ -67,7 +67,7 @@
             background-color: #d55f87;
         }
         body {
-            background-image: url('/assets/First\ page\ phone.png');
+            background-image: url('');
    
         }
     </style>
