--- a/public/intervalChoice.html
+++ b/public/intervalChoice.html
@@ -97,8 +97,7 @@
             background-color: #d55f87;
         }
         body {
-            background-image: url('https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEXhiWu8xJqJTntEGNzEZXQYE%2BwrI9s9oKxz1tyMsd%2FXKgXfRb6DSydaq8XUL5uBTXjIPFt29BUyWzfvnhRL%2FanBIw3MFSQ4o9mx%2BqTCZdZ9vqkRRwX1xlG42LatoM5HZ5o4dWjVf9SYvuELG2hRigiY0Xq66F4Dt2%2Bw7jd3sOkZw2nvfTjHKkV7KZtdOwCVAJpppwnF97sTCwNXK%2Fr%2B6LMtVgLIhbXKTh5L0iV4Qo%2BYTu%2FB%2Fz031BjDq0wgWkHj62UZ8v1xMHZposBWf7X8bCOJxURxMV3r8kmmoSDy5%2B4O4fkaNRfN3Mj6cXJA%2FZLC1z%2BNuxshZmUF82KLbbgt9aeHpFmMRIXSaYQ8K%2BN2b1%2Fn6gYWlTP7BoADe6c47MLeP3pSr%2FuryJYGejKMZp7fuJZ2%2FTSd0O8aM19%2BFvqeuW%2FwtB6eA07cmxLpkbb1wbQsIjGTdsw6TJcjqHkTDwuISsBL2SZJdOxUInRYtG9EOEpDQcDv2ZFDpUTBuZ1LDCSpZO68aG5KLzct25AJezyvcpuSDkDvH7QVdkZ7E%2BCjAhk%2FItLFFsikk%2FLRXNPMch53sppC1HG3SPRZO7q8KK8%3D&allow_caching=true&sz=w1920-h912');
-   
+            background-image: url('/assets/Third\ page\ phone.png');
         }
     </style>
 </head>
