--- a/public/levelChoice.html
+++ b/public/levelChoice.html
@@ -68,6 +68,9 @@
         .begin-workout-button:hover {
             background-color: #d55f87;
         }
+        body {
+            background-image: url('/assets/Second\ page.png');
+        }
     </style>
 </head>
 <body>
