Add grassyIntro.html for user introduction and initial setup
- Created grassyIntro.html with a welcoming message and a "Get Started" button.
- Included TensorFlow.js and pose-detection model scripts for future functionality.
- Styled the page for a pleasant user experience with custom CSS.
- Removed empty login.html file as it was not needed.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
             margin: 0;
             padding: 0;
             font-family: 'Work Sans', sans-serif;
-            color: #333;
+            background-image: url('/assets/OnboardingGrassy.png');
+            background-size: cover; /* Make the background image cover the whole screen */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Prevent the background from repeating */
             text-align: center;
             display: flex;
             justify-content: center;
@@ -68,8 +71,10 @@
             background-color: #d55f87;
         }
         body {
-            background-image: url('/assets/First\ page\ phone.png');
+            background-image: url('assets/First page phone.png');
    
+            background-size: cover; /* Added to ensure the background image covers the entire body */
+            background-position: center; /* Added to center the background image */
         }
     </style>
 </head>
