--- a/public/workout.html
+++ b/public/workout.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="/assets/logo.png">>
   <link rel="icon" type="image/x-icon" href="/assets/logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +27,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background-image: url('./assets/WorkoutGrassy.png');
+      background-image: url('/assets/WorkoutGrassy.png');
       background-size: cover; /* optional: makes the image cover the screen nicely */
       background-position: center; /* optional: centers the image */
 
