--- a/public/levelChoice.html
+++ b/public/levelChoice.html
@@ -16,7 +16,11 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            font-family: 'Work Sans', sans-serif;            color: #333;
+            background-image: url('/assets/LevelGrassy.png');
+            background-size: cover; /* Make the background image cover the whole screen */
+            background-position: center; /* Center the background image */
+            background-repeat: no-repeat; /* Prevent the background from repeating */
+            font-family: 'Work Sans', sans-serif;
             text-align: center;
             display: flex;
             justify-content: center;
