Update onboarding styles: refine input field design and adjust background properties

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,13 @@
         .onboarding-container button:hover {
             background-color: #d55f87;
         }
-        body {
-            background-image: url('assets/First page phone.png');
-   
-            background-size: cover; /* Added to ensure the background image covers the entire body */
-            background-position: center; /* Added to center the background image */
+        .onboarding-container input[type="text"] {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0 20px 0;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            font-size: 16px;
         }
     </style>
 </head>
