--- a/public/grassyIntro.html
+++ b/public/grassyIntro.html
@@ -57,6 +57,9 @@
       .start-button:hover button{
         background-color: #d55f87;
       }
+      body {
+            background-image: url('/assets/Fifth\ page.png');
+        }
     </style>
   </head>
   <body>
