--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
         <h1>Hey there,</h1>
         <p>Ready to touch grass?</p>
         <p>Enter your REAL Name</p>
-        <form action="intervalChoice.html" method="POST">
+        <form action="intervalChoice.html" method="get">
             <input type="text" name="realName" placeholder="Your Name" required>
             <input type="hidden" name="onboarding" value="true">
             <input type="hidden" name="onboardingStep" value="1">
