--- a/public/levelChoice.html
+++ b/public/levelChoice.html
@@ -85,7 +85,7 @@
             <button>Medium - 20 Jumping Jacks 🟡</button>
             <button>Hard - 35 Jumping Jacks 🔴</button>
         </div>
-        <button class="begin-workout-button" onclick="window.location.href='workout.html'">Begin Workout</button>    
+        <button class="begin-workout-button" onclick="window.location.href='grassyIntro.html'">Meet Grassy</button>    
     </div>
 </body>
 </html>
